--- a/client/src/components/NotesList.css
+++ b/client/src/components/NotesList.css
@@ -136,3 +136,22 @@
   font-weight: normal;
   margin-left: 10px;
 }
+
+.note-item-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.note-type-indicator {
+  color: #666;
+  font-size: 16px;
+  flex-shrink: 0;
+  margin-top: 2px;
+}
+
+.note-type-indicator svg {
+  width: 16px;
+  height: 16px;
+}
